<resources>
    <string name="app_name">Datos Personales</string>
    <string name="Nombre">Nombre</string>
    <string name="Teléfono">Teléfono</string>
    <string name="Email">Email</string>
    <string name="Fecha">dd/mm/aaaa</string>
    <string name="Descripción">Descripción del contacto</string>
    <string name="Siguiente">Siguiente</string>
    <string name="confirmar_datos">Confirmar Datos</string>
    <string name="editar_datos">Editar Datos</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
</resources>